--- a/2/syscoin.conf
+++ b/2/syscoin.conf
@@ -1,7 +1,24 @@
-server=1
-rpcuser=u
-rpcpassword=p
-cakenet=1
-rpcport=28378
+# testnet-box functionality
+regtest=1
+dnsseed=0
+upnp=0
+
+# don't listen on a port, just connect to node 1
+listen=0
+connect=127.0.0.1:28389
+
+# listen on different ports than default testnet
 port=28379
+rpcport=28378
 httpport=8082
+
+# always run a server, even with bitcoin-qt
+server=1
+
+# enable SSL for RPC server
+#rpcssl=1
+
+rpcallowip=0.0.0.0/0
+
+rpcuser=admin2
+rpcpassword=123
